# family-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  gen_admin_jwt.py
ops/backup/: backup_to_s3.sh  crontab
ops/certbot/: init_renew.sh
ops/deploy/: provision.md  systemd-family-ai.service
ops/docker/: Dockerfile.server  Dockerfile.web
ops/nginx/: nginx.conf  nginx.prod.conf
sample_corpus/: emotional_regulation_ar.md  morning_routine_checklist.md  screen_time_balanced.md
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20251004145219_add_document_registry.py  20251007160000_add_chat_turns.py  20251008120000_add_chat_threads.py
server/app/: main.py
server/app/api/: auth.py  chat.py  profile.py  tips.py  upload.py
server/app/core/: openai_client.py  prompts.py  safety.py  security.py  settings.py
server/app/db/: crud.py  models.py  session.py
server/app/rag/: ingest.py  retriever.py  schemas.py  vectorstore_chroma.py  vectorstore_pgvector.py
server/app/scripts/: install_deps.sh  list_households.py  seed_sample.py  set_household_secret.py
server/app/tests/: test_chat.py  test_chat_memory.py
shared/openapi/: schema.json
shared/types/: api.d.ts
tools/: list_households.py  set_household_secret.py
web/: package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/upload/: page.tsx
web/app/chat/: page.module.css  page.tsx
web/app/profile/: page.tsx
web/components/: Chat.module.css  Chat.tsx  ProfileForm.tsx  TipCard.tsx
web/lib/: api.ts  types.ts
